[MODEUS-183] Add reports/releases endpoint (#182)
* Add /reports/releases endpoint

Add reportreleases index
Fix reporttypes index

* Fix a few code issues